--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
@@ -18,13 +19,14 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "query-string": "^7.1.1",
-    "react": "^18.0.0",
+    "react": "^17.0.1",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.1",
+    "react-two-thumb-input-range": "^1.0.7",
     "reactstrap": "^9.0.2",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4",
