--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
+    "cdbreact": "^1.5.2",
     "chart.js": "^3.8.0",
     "dotenv": "^16.0.0",
     "firebase": "^9.8.1",
@@ -28,7 +29,7 @@
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "react-toastify": "^9.0.1",
     "react-two-thumb-input-range": "^1.0.7",
     "reactstrap": "^9.0.2",
@@ -37,7 +38,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
